# zara-customer-support-agent

./: .env  README.md  agent.py  app.py  client.py  langagent.py  pyproject.toml  query_engine.py  recommendation.py  server.py  support.py  system_prompt.md  system_prompt.txt
chroma_db/: chroma.sqlite3
chroma_db/42cace97-c75a-4178-b70f-9e4f91f9ada7/: index_metadata.pickle
chroma_db/c1691b92-6adf-4962-8b79-052ec7510649/: index_metadata.pickle
data/: FAQs.json  return_policy.json  shipping_policy.json  zara.csv
