[project]
name = "gymshark-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chroma>=0.2.0",
    "chromadb>=1.0.15",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.0",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-readers-file>=0.4.11",
    "llama-index-readers-json>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.2",
    "mcp>=1.12.2",
    "ollama>=0.5.1",
    "pandas>=2.2.3",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
]
